<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_screen" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/statusbar" >

<TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/TitletextView"
            style="@style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.73"
            android:gravity="center_horizontal"
            android:text="@string/blockednolist"
            android:textColor="@color/header"
            android:textAppearance="?android:attr/textAppearanceLarge" />

  <Button
      android:id="@+id/btn_option"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:background="@drawable/listview"
      android:onClick="@string/click_event" android:paddingTop="3dp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1" >

    </ListView>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no_blocked_number" />

</RelativeLayout>