<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/statusbar"
        android:orientation="horizontal" >

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/TitletextView"
            style="@style/ButtonBar"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/schedule_message"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/header" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/linearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_below="@+id/TitletextView">

                <EditText
                    android:id="@+id/edtMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/mobile_number"
                    android:inputType="number" >

                    <requestFocus />
                </EditText>

                <Button
                    android:id="@+id/Contacts"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.17"
                    android:background="@drawable/addressbtn"
                    android:onClick="@string/click_event" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtMessage"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:gravity="top"
                android:hint="@string/message"
                android:inputType="textPostalAddress" android:layout_below="@id/linearLayout1"/>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="141dp"
                android:orientation="horizontal"
                android:paddingTop="2dp" android:layout_below="@id/edtMessage">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/calender_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Set Date"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="Select the date you want to send this message" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/linearLayout02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <ImageButton
                            android:id="@+id/monthplus"
                            android:layout_width="60dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/picker_add"
                            android:onClick="@string/click_event" />

                        <ImageButton
                            android:id="@+id/dateplus"
                            android:layout_width="60dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/picker_add"
                            android:onClick="@string/click_event" />

                        <ImageButton
                            android:id="@+id/yearplus"
                            android:layout_width="60dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/picker_add"
                            android:onClick="@string/click_event" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp" >

                        <TextView
                            android:id="@+id/month"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/picker_text_area"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/picker_text_area"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/picker_text_area"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/monthDesc"
                            android:layout_width="60dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/picker_delete"
                            android:onClick="@string/click_event" />

                        <Button
                            android:id="@+id/dateDesc"
                            android:layout_width="60dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/picker_delete"
                            android:onClick="@string/click_event" />

                        <Button
                            android:id="@+id/yearDesc"
                            android:layout_width="60dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/picker_delete"
                            android:onClick="@string/click_event" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="130dp"
                android:orientation="horizontal"
                android:paddingTop="5dp" android:layout_below="@+id/linearLayout2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/clock_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Set Time"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="Select the time you want to send this message" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp" >

                    <LinearLayout
                        android:id="@+id/LinearLayout03"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <ImageButton
                            android:id="@+id/hourplus"
                            android:layout_width="60dp"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:background="@drawable/picker_add"
                            android:onClick="click" />

                        <TextView
                            android:id="@+id/hour"
                            android:layout_width="60dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/picker_text_area"
                            android:ellipsize="middle"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />

                        <Button
                            android:id="@+id/hourDesc"
                            android:layout_width="60dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/picker_delete"
                            android:onClick="@string/click_event" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout01"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <ImageButton
                            android:id="@+id/minuteplus"
                            android:layout_width="60dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/picker_add"
                            android:onClick="@string/click_event" />

                        <TextView
                            android:id="@+id/minute"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/picker_text_area"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />

                        <Button
                            android:id="@+id/minDesc"
                            android:layout_width="60dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/picker_delete"
                            android:onClick="@string/click_event" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout02"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <ImageButton
                            android:id="@+id/AmPm"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="50dp"
                            android:background="@drawable/am_btn"
                            android:onClick="@string/click_event" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >




        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true" >

            <ImageButton
                android:id="@+id/btnsave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                 android:layout_weight="1"
                android:onClick="@string/click_event"
                android:src="@drawable/save" />

            <ImageButton
                android:id="@+id/btnviewlist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@string/click_event"
                android:src="@drawable/showlist" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>